--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                                     <nav class="d-none d-lg-block">
                                         <ul id="navigation">
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="job_listing.html">Courses</a></li>
-                                            <li><a href="about.html">Commericial Trianing</a></li>
+                                            <li><a href="l">Courses</a></li>
+                                            <li><a href="">Commericial Trianing</a></li>
                                             <li><a href="#">Community Hub</a>
                                                 <ul class="submenu">
-                                                    <li><a href="blog.html">Our Network</a></li>
-                                                    <li><a href="single-blog.html">Learner Project Spotlight</a></li>
-                                                    <li><a href="elements.html">Mental Health and Wellbeing</a></li>
+                                                    <li><a href="l">Our Network</a></li>
+                                                    <li><a href="">Learner Project Spotlight</a></li>
+                                                    <li><a href="">Mental Health and Wellbeing</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="">Accessibility</a></li>
-                                            <li><a href="contact.html">Learner Access</a></li>
+                                            <li><a href="">Learner Access</a></li>
                                         </ul>
                                     </nav>
                                 </div>          
@@ -229,7 +229,7 @@
                                         <span class="flaticon-tour"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">Software Engineering</a></h5>
+                                       <h5><a href="">Software Engineering</a></h5>
                                         <span>(653)</span>
                                     </div>
                                 </div>
@@ -240,7 +240,7 @@
                                         <span class="flaticon-cms"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">AI & Machine Learning</a></h5>
+                                       <h5><a href="">AI & Machine Learning</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -251,7 +251,7 @@
                                         <span class="flaticon-report"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">Digital Platform</a></h5>
+                                       <h5><a href="">Digital Platform</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -262,7 +262,7 @@
                                         <span class="flaticon-app"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">Mobile Application</a></h5>
+                                       <h5><a href="">Mobile Application</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -273,7 +273,7 @@
                                         <span class="flaticon-helmet"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">CCyber Security</a></h5>
+                                       <h5><a href="">Cyber Security</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -284,7 +284,7 @@
                                         <span class="flaticon-high-tech"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">Information Technology</a></h5>
+                                       <h5><a href="j">Information Technology</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -295,7 +295,7 @@
                                         <span class="flaticon-real-estate"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">Infrastructure</a></h5>
+                                       <h5><a href="">Infrastructure</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -306,7 +306,7 @@
                                         <span class="flaticon-content"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">Data Analysis</a></h5>
+                                       <h5><a href="">Data Analysis</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -317,7 +317,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="browse-btn2 text-center mt-50">
-                                    <a href="job_listing.html" class="border-btn2">Browse All</a>
+                                    <a href="" class="border-btn2">Browse All</a>
                                 </div>
                             </div>
                         </div>
