--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </div>
                             <div class="support-caption">
                                 <p class="pera-top">The workplace culture in the UK is characterized by a blend of professionalism, inclusivity, and respect for individuality. British workplaces often prioritize clear communication, teamwork, and a commitment to excellence. Diversity and inclusion initiatives are increasingly prominent, with organizations striving to create environments that embrace differences in background, perspective, and experience. Work-life balance is also valued, with flexible working arrangements becoming more prevalent.</p>
-                                <a href="about.html" class="btn post-btn">Explore</a>
+                                <a href="" class="btn post-btn">Explore</a>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="blog-cap">
                                     <p>|   Work-Life Balance</p>
-                                    <h3><a href="single-blog.html">Achieving a healthy work-life balance is valued in the UK.</a></h3>
+                                    <h3><a href="">Achieving a healthy work-life balance is valued in the UK.</a></h3>
                                     <a href="#" class="more-btn">Experience Now»</a>
                                 </div>
                             </div>
@@ -199,7 +199,7 @@
                                 </div>
                                 <div class="blog-cap">
                                     <p>|   Socializing and Networking</p>
-                                    <h3><a href="single-blog.html">Socializing with colleagues and networking events</a></h3>
+                                    <h3><a href="">Socializing with colleagues and networking events</a></h3>
                                     <a href="#" class="more-btn">Experience Now»</a>
                                 </div>
                             </div>
