--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <h2>1k Ukraine Refugees are getting Jobs</h2>
                             </div>
                             <div class="support-caption">
-                                <p class="pera-top">The workplace culture in the UK is characterized by a blend of professionalism, inclusivity, and respect for individuality. British workplaces often prioritize clear communication, teamwork, and a commitment to excellence. Diversity and inclusion initiatives are increasingly prominent, with organizations striving to create environments that embrace differences in background, perspective, and experience. Work-life balance is also valued, with flexible working arrangements becoming more prevalent.</p>
+                                <p class="pera-top">The workplace culture in the UK is characterised by a blend of professionalism, inclusivity, and respect for individuality. British workplaces often prioritise clear communication, teamwork, and a commitment to excellence. Diversity and inclusion initiatives are increasingly prominent, with organisations striving to create environments that embrace differences in background, perspective, and experience. Work-life balance is also valued, with flexible working arrangements becoming more prevalent.</p>
                                 <a href="about.html" class="btn post-btn">Explore</a>
                             </div>
                         </div>
