--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="job_listing.html">Courses</a></li>
                                             <li><a href="about.html">Commericial Trianing</a></li>
-                                            <li><a href="#">Community Hub</a>
+                                            <li><a href="#">Community Hub</a>    
                                                 <ul class="submenu">
-                                                    <li><a href="blog.html">Our Network</a></li>
+                                                    <li><a href="https://forms.gle/nimiG4kbJQP7qBCn9">Mentor Sign-up Form</a></li>
+                                                    <li><a href="https://forms.gle/tMnWDY4TeaPVk8HSA">Mentee Sign-up Form</a></li>
                                                     <li><a href="single-blog.html">Learner Project Spotlight</a></li>
                                                     <li><a href="elements.html">Mental Health and Wellbeing</a></li>
                                                 </ul>
@@ -102,10 +103,12 @@
                                     <div class="select-form">
                                         <div class="select-itms">
                                             <select name="select" id="select1">
-                                                <option value="">Location Glasgow</option>
-                                                <option value="">Location London</option>
-                                                <option value="">Location Manchester</option>
-                                                <option value="">Location Edinburgh</option>
+                                                <option value="">Location: Glasgow</option>
+                                                <option value="">Location: Aberdeen</option>
+                                                <option value="">Location: Edinburgh</option>
+                                                <option value="">Location: Dundee</option>
+                                                <option value="">Location: Inverness</option>
+                                                <option value="">Location: Stirling</option>
                                             </select>
                                         </div>
                                     </div>
@@ -273,7 +276,7 @@
                                         <span class="flaticon-helmet"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">CCyber Security</a></h5>
+                                       <h5><a href="job_listing.html">Cyber Security</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
