--- a/mentoring_sign_up.html
+++ b/mentoring_sign_up.html
@@ -53,7 +53,7 @@
                                             <li><a href="about.html">Commericial Trianing</a></li>
                                             <li><a href="#">Community Hub</a>
                                                 <ul class="submenu">
-                                                    <li><a href="mentoring.html">Our Network</a></li>
+                                                    <li><a href="blog.html">Our Network</a></li>
                                                     <li><a href="single-blog.html">Learner Project Spotlight</a></li>
                                                     <li><a href="elements.html">Mental Health and Wellbeing</a></li>
                                                 </ul>
