--- a/mentoring_sign_up.html
+++ b/mentoring_sign_up.html
@@ -51,9 +51,10 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="job_listing.html">Courses</a></li>
                                             <li><a href="about.html">Commericial Trianing</a></li>
-                                            <li><a href="#">Community Hub</a>
+                                            <li><a href="#">Community Hub</a>    
                                                 <ul class="submenu">
-                                                    <li><a href="blog.html">Our Network</a></li>
+                                                    <li><a href="https://forms.gle/nimiG4kbJQP7qBCn9">Mentor Sign-up Form</a></li>
+                                                    <li><a href="https://forms.gle/tMnWDY4TeaPVk8HSA">Mentee Sign-up Form</a></li>
                                                     <li><a href="single-blog.html">Learner Project Spotlight</a></li>
                                                     <li><a href="elements.html">Mental Health and Wellbeing</a></li>
                                                 </ul>
