--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                                 </div>
                                 <div class="blog-cap">
                                     <p>|   Work-Life Balance</p>
-                                    <h3><a href="vr.html">Achieving a healthy work-life balance is valued in the UK.</a></h3>
-                                    <a href="vr.html" class="more-btn">Experience Now»</a>
+                                    <h3><a href="vr1.html">Achieving a healthy work-life balance is valued in the UK.</a></h3>
+                                    <a href="vr1.html" class="more-btn">Experience Now»</a>
                                 </div>
                             </div>
                         </div>
@@ -199,8 +199,8 @@
                                 </div>
                                 <div class="blog-cap">
                                     <p>|   Socializing and Networking</p>
-                                    <h3><a href="vr.html">Socializing with colleagues and networking events</a></h3>
-                                    <a href="vr.html" class="more-btn">Experience Now»</a>
+                                    <h3><a href="vr2.html">Socializing with colleagues and networking events</a></h3>
+                                    <a href="vr2.html" class="more-btn">Experience Now»</a>
                                 </div>
                             </div>
                         </div>
