--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                                     </div>
                                 </div>
                                 <div class="blog-cap">
-                                    <p>|   Socializing and Networking</p>
-                                    <h3><a href="vr.html">Socializing with colleagues and networking events</a></h3>
+                                    <p>|   Socialising and Networking</p>
+                                    <h3><a href="vr.html">Socialising with colleagues and networking events</a></h3>
                                     <a href="vr.html" class="more-btn">Experience Now»</a>
                                 </div>
                             </div>
