--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <!-- form -->
                                 <form action="#" class="search-box">
                                     <div class="input-form">
-                                        <input type="text" placeholder="Job Tittle or keyword">
+                                        <input type="text" placeholder="Job Title or keyword">
                                     </div>
                                     <div class="select-form">
                                         <div class="select-itms">
