--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     <nav class="d-none d-lg-block">
                                         <ul id="navigation">
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="https://codedivision.co.uk/communitycourses">Courses</a></li>
+                                            <li><a href="https://codedivision.co.uk/communitycourses">Other Courses</a></li>
                                             <li><a href="about.html">Commericial Trianing</a></li>
                                             <li><a href="#">Community Hub</a>    
                                                 <ul class="submenu">
