--- a/vr2.html
+++ b/vr2.html
@@ -52,7 +52,7 @@
                                     <nav class="d-none d-lg-block">
                                         <ul id="navigation">
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="">Courses</a></li>
+                                            <li><a href="">Other Courses</a></li>
                                             <li><a href="">Commericial Trianing</a></li>
                                             <li><a href="#">Community Hub</a>    
                                                 <ul class="submenu">
