--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                         <span class="flaticon-tour"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="">Software Engineering</a></h5>
+                                       <h5><a href="">Administrator</a></h5>
                                         <span>(653)</span>
                                     </div>
                                 </div>
@@ -242,7 +242,7 @@
                                         <span class="flaticon-cms"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="">AI & Machine Learning</a></h5>
+                                       <h5><a href="">Business Analyst</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -253,7 +253,7 @@
                                         <span class="flaticon-report"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="">Digital Platform</a></h5>
+                                       <h5><a href="">Tech Ops</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -264,7 +264,7 @@
                                         <span class="flaticon-app"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="">Mobile Application</a></h5>
+                                       <h5><a href="">Data Analyst</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -275,7 +275,7 @@
                                         <span class="flaticon-helmet"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="job_listing.html">CCyber Security</a></h5>
+                                       <h5><a href="job_listing.html">Cyber Security</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
@@ -308,7 +308,7 @@
                                         <span class="flaticon-content"></span>
                                     </div>
                                     <div class="services-cap">
-                                       <h5><a href="">Data Analysis</a></h5>
+                                       <h5><a href="">Transcriber</a></h5>
                                         <span>(658)</span>
                                     </div>
                                 </div>
