--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-9 col-md-10">
                                 <div class="hero__caption">
-                                    <h1>Understanding Workplace Culture in UK using VR</h1>
+                                    <h1>Understanding Workplace Culture in UK</h1>
                                 </div>
                             </div>
                         </div>
