--- a/vr2.html
+++ b/vr2.html
@@ -125,15 +125,15 @@
                                 </div>
                                 <div class="blog_item_img">
                                     <video width="770" height="400" controls>
-                                        <source src="movie.mp4" type="video/mp4">
+                                        <source src="./assets/videos/movie2.MOV" type="video/mp4">
                                         <source src="movie.ogg" type="video/ogg">
                                         Your browser does not support the video tag.
                                       </video>
 
                                 </div>
                                 <div>
-                                    <a href="" class="btn post-btn" style="margin-right: 248px;">Finish The Work</a>
-                                    <a href="" class="btn post-btn">Have A Cup of Coffee</a>
+                                    <a href="" class="btn post-btn" style="margin-right: 305px;">Coffee Chat</a>
+                                    <a href="" class="btn post-btn">Professional Chat</a>
                                 </div>
                             </article>
     
