--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                                     <li><a href="elements.html">Mental Health and Wellbeing</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="job_listing.html">Courses</a></li>
+                                            <li><a href="https://codedivision.co.uk/communitycourses">Other Courses</a></li>
                                             <li><a href="about.html">Commericial Trianing</a></li>
                                             <li><a href="">Accessibility</a></li>
                                             <li><a href="">Learner Access</a></li>
