Deleted unused files, changed nav bar on vr1
Deleted unused files, changed nav bar on vr1

--- a/vr1.html
+++ b/vr1.html
@@ -52,15 +52,16 @@
                                     <nav class="d-none d-lg-block">
                                         <ul id="navigation">
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="">Other Courses</a></li>
-                                            <li><a href="">Commericial Trianing</a></li>
-                                            <li><a href="#">Community Hub</a>
+                                            <li><a href="#">Community Hub</a>    
                                                 <ul class="submenu">
-                                                    <li><a href="">Our Network</a></li>
-                                                    <li><a href="">Learner Project Spotlight</a></li>
-                                                    <li><a href="">Mental Health and Wellbeing</a></li>
+                                                    <li><a href="https://forms.gle/nimiG4kbJQP7qBCn9">Mentor Sign-up Form</a></li>
+                                                    <li><a href="https://forms.gle/tMnWDY4TeaPVk8HSA">Mentee Sign-up Form</a></li>
+                                                    <li><a href="single-blog.html">Learner Project Spotlight</a></li>
+                                                    <li><a href="elements.html">Mental Health and Wellbeing</a></li>
                                                 </ul>
                                             </li>
+                                            <li><a href="job_listing.html">Courses</a></li>
+                                            <li><a href="about.html">Commericial Trianing</a></li>
                                             <li><a href="">Accessibility</a></li>
                                             <li><a href="">Learner Access</a></li>
                                         </ul>
