--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-10">
                                 <div class="cv-caption text-center">
-                                    <p class="pera1">PERSONALISED UNDERSTANDING</p>
-                                    <p class="pera2"> Understanding Your Workplace Culture with Your Online Resume!</p>
-                                    <a href="#" class="border-btn2 border-btn4">Upload your cv</a>
+                                    <p class="pera1">PERSONALISED CV FEEDBACK</p>
+                                    <p class="pera2"> Upload your CV here to get personalised feedback from our tech professionals!</p>
+                                    <a href="#" class="border-btn2 border-btn4">Upload your CV</a>
                                 </div>
                             </div>
                         </div>
