--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <div class="section-tittle section-tittle2">
                                 <!-- <span>UK Workplace Culture</span> -->
                                 <br></br>
-                                <h2>1k Afghanistan Refugees are getting Jobs</h2>
+                                <h2>One-Thousand Afghan Refugees Are Getting Jobs</h2>
                             </div>
                             <div class="support-caption">
                                 <p class="pera-top">The workplace culture in the UK is characterised by a blend of professionalism, inclusivity, and respect for individuality. British workplaces often prioritise clear communication, teamwork, and a commitment to excellence. Diversity and inclusion initiatives are increasingly prominent, with organisations striving to create environments that embrace differences in background, perspective, and experience. Work-life balance is also valued, with flexible working arrangements becoming more prevalent.</p>
