--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                                                 <ul class="submenu">
                                                     <li><a href="https://forms.gle/nimiG4kbJQP7qBCn9">Mentor Sign-up Form</a></li>
                                                     <li><a href="https://forms.gle/tMnWDY4TeaPVk8HSA">Mentee Sign-up Form</a></li>
-                                                    <li><a href="single-blog.html">Learner Project Spotlight</a></li>
-                                                    <li><a href="elements.html">Mental Health and Wellbeing</a></li>
+                                                    <li><a href="">Learner Project Spotlight</a></li>
+                                                    <li><a href="">Mental Health and Wellbeing</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="https://codedivision.co.uk/communitycourses">Other Courses</a></li>
-                                            <li><a href="about.html">Commericial Trianing</a></li>
+                                            <li><a href="">Commericial Trianing</a></li>
                                             <li><a href="">Accessibility</a></li>
                                             <li><a href="">Learner Access</a></li>
                                         </ul>
@@ -137,7 +137,7 @@
                             </div>
                             <div class="support-caption">
                                 <p class="pera-top">The workplace culture in the UK is characterised by a blend of professionalism, inclusivity, and respect for individuality. British workplaces often prioritise clear communication, teamwork, and a commitment to excellence. Diversity and inclusion initiatives are increasingly prominent, with organisations striving to create environments that embrace differences in background, perspective, and experience. Work-life balance is also valued, with flexible working arrangements becoming more prevalent.</p>
-                                <a href="about.html" class="btn post-btn">Explore</a>
+                                <a href="" class="btn post-btn">Explore</a>
                             </div>
                         </div>
                     </div>
