--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                                                     <li><a href="https://forms.gle/tMnWDY4TeaPVk8HSA">Mentee Sign-up Form</a></li>
                                                     <li><a href="">Learner Project Spotlight</a></li>
                                                     <li><a href="">Mental Health and Wellbeing</a></li>
+                                                    <li><a href="./resources.html">Resources</a></li>
+
                                                 </ul>
                                             </li>
                                             <li><a href="https://codedivision.co.uk/communitycourses">Other Courses</a></li>
