--- a/personas.html
+++ b/personas.html
@@ -55,11 +55,14 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="l">Courses</a></li>
                                             <li><a href="">Commericial Trianing</a></li>
-                                            <li><a href="#">Community Hub</a>
+                                            <li><a href="#">Community Hub</a>    
                                                 <ul class="submenu">
-                                                    <li><a href="l">Our Network</a></li>
-                                                    <li><a href="">Learner Project Spotlight</a></li>
-                                                    <li><a href="">Mental Health and Wellbeing</a></li>
+                                                    <li><a href="https://forms.gle/nimiG4kbJQP7qBCn9">Mentor Sign-up Form</a></li>
+                                                    <li><a href="https://forms.gle/tMnWDY4TeaPVk8HSA">Mentee Sign-up Form</a></li>
+                                                    <li><a href="https://codedivision.co.uk/studentprojectspotlight">Learner Project Spotlight</a></li>
+                                                    <li><a href="https://codedivision.co.uk/mentalhealth">Mental Health and Wellbeing</a></li>
+                                                    <li><a href="./resources.html">Resources</a></li>
+
                                                 </ul>
                                             </li>
                                             <li><a href="">Accessibility</a></li>
