--- a/vr2.html
+++ b/vr2.html
@@ -56,8 +56,10 @@
                                                 <ul class="submenu">
                                                     <li><a href="https://forms.gle/nimiG4kbJQP7qBCn9">Mentor Sign-up Form</a></li>
                                                     <li><a href="https://forms.gle/tMnWDY4TeaPVk8HSA">Mentee Sign-up Form</a></li>
-                                                    <li><a href="single-blog.html">Learner Project Spotlight</a></li>
-                                                    <li><a href="elements.html">Mental Health and Wellbeing</a></li>
+                                                    <li><a href="https://codedivision.co.uk/studentprojectspotlight">Learner Project Spotlight</a></li>
+                                                    <li><a href="https://codedivision.co.uk/mentalhealth">Mental Health and Wellbeing</a></li>
+                                                    <li><a href="./resources.html">Resources</a></li>
+
                                                 </ul>
                                             </li>
                                             <li><a href="">Other Courses</a></li>
