--- a/personas.html
+++ b/personas.html
@@ -53,8 +53,6 @@
                                     <nav class="d-none d-lg-block">
                                         <ul id="navigation">
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="l">Courses</a></li>
-                                            <li><a href="">Commericial Trianing</a></li>
                                             <li><a href="#">Community Hub</a>    
                                                 <ul class="submenu">
                                                     <li><a href="https://forms.gle/nimiG4kbJQP7qBCn9">Mentor Sign-up Form</a></li>
@@ -65,11 +63,18 @@
 
                                                 </ul>
                                             </li>
-                                            <li><a href="">Accessibility</a></li>
-                                            <li><a href="">Learner Access</a></li>
+                                            <li><a href="https://codedivision.co.uk/communitycourses">Other Courses</a></li>
+                                            <li><a href="#">Commericial Trianing</a>    
+                                                <ul class="submenu">
+                                                    <li><a href="https://codedivision.co.uk/commercial-cyber">Cyber Skills Training</a></li>
+                                                    <li><a href="https://codedivision.co.uk/commercial-min">Data Skills for Business</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="https://codedivision.co.uk/accessibility">Accessibility</a></li>
+                                            <li><a href="https://moodle.codedivision.co.uk/login/index.php">Learner Access</a></li>
                                         </ul>
                                     </nav>
-                                </div>          
+                                </div>        
 
                             </div>
                         </div>
