--- a/vr1.html
+++ b/vr1.html
@@ -62,13 +62,18 @@
 
                                                 </ul>
                                             </li>
-                                            <li><a href="job_listing.html">Courses</a></li>
-                                            <li><a href="about.html">Commericial Trianing</a></li>
-                                            <li><a href="">Accessibility</a></li>
-                                            <li><a href="">Learner Access</a></li>
+                                            <li><a href="https://codedivision.co.uk/communitycourses">Other Courses</a></li>
+                                            <li><a href="#">Commericial Trianing</a>    
+                                                <ul class="submenu">
+                                                    <li><a href="https://codedivision.co.uk/commercial-cyber">Cyber Skills Training</a></li>
+                                                    <li><a href="https://codedivision.co.uk/commercial-min">Data Skills for Business</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="https://codedivision.co.uk/accessibility">Accessibility</a></li>
+                                            <li><a href="https://moodle.codedivision.co.uk/login/index.php">Learner Access</a></li>
                                         </ul>
                                     </nav>
-                                </div>          
+                                </div>         
 
                             </div>
                         </div>
