--- a/resources.html
+++ b/resources.html
@@ -105,7 +105,7 @@
     </header>
     <main>
 
-            <button class="accordion">Uk Wide</button>
+            <button class="accordion"><h2>UK Wide</h2></button>
     <div class="panel">
     <p>National Databank (https://www.goodthingsfoundation.org/national-databank/) - offers free mobile data for adults struggling to access the internet. You qualify if you are:
 
@@ -116,12 +116,12 @@
         </p>
     </div>
 
-    <button class="accordion">Worldwide</button>
+    <button class="accordion"><h2>Worldwide</h2></button>
     <div class="panel">
     <p>MIT Emerging Talent (https://emergingtalent.mit.edu/) - You are eligible to apply for a certificate in Computer and Data Science with MIT if you have a passion for technology and are eager to learn. This program is open to individuals from diverse backgrounds, including students, professionals, and lifelong learners. No prior experience in computer science or data science is required; however, basic proficiency in mathematics and analytical thinking is recommended. Participants will gain hands-on experience in coding, data analysis, and problem-solving, equipping them with valuable skills for the digital age.</p>
     </div>
 
-    <button class="accordion">Scotland-wide</button>
+    <button class="accordion"><h2>Scotland-wide</h2></button>
     <div class="panel">
     <p>Migration Scotland (https://migrationscotland.org.uk/policyarea/tools-and-resources/) - Provides a comprehensive set of tools and resources for migrants, refugees, and asylum seekers in Scotland. These resources cover various aspects such as legal rights, healthcare, education, employment, and integration support, aiming to empower individuals and communities to navigate the challenges of migration and build successful lives in Scotland.</p>
     </div>
