--- a/resources.html
+++ b/resources.html
@@ -106,7 +106,7 @@
     </header>
     <main>
 
-            <button class="accordion">UK-wide</button>
+            <button class="accordion"><h2>UK-Wide</h2></button>
     <div class="panel">
     <p> <a target="_blank" href="https://www.goodthingsfoundation.org/national-databank">National Databank </a><br><br> Offers free mobile data for adults struggling to access the internet. You qualify if you are:
 
