--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'fa', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+    }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 <html class="no-js" lang="zxx">
     <head>
         <meta charset="utf-8">
@@ -70,6 +78,7 @@
                                             <li><a href="https://moodle.codedivision.co.uk/login/index.php">Learner Access</a></li>
                                         </ul>
                                     </nav>
+                                    <div id="google_translate_element"></div>
                                 </div>          
 
                             </div>
