--- a/resources.html
+++ b/resources.html
@@ -92,7 +92,7 @@ a:hover{
                                                 </ul>
                                             </li>
                                             <li><a href="https://codedivision.co.uk/communitycourses">Other Courses</a></li>
-                                            <li><a href="">Commericial Trianing</a></li>
+                                            <li><a href="">Commercial Training</a></li>
                                             <li><a href="">Accessibility</a></li>
                                             <li><a href="">Learner Access</a></li>
                                         </ul>
