--- a/vr1.html
+++ b/vr1.html
@@ -63,7 +63,7 @@
                                                 </ul>
                                             </li>
                                             <li><a href="https://codedivision.co.uk/communitycourses">Other Courses</a></li>
-                                            <li><a href="#">Commericial Trianing</a>    
+                                            <li><a href="#">Commercial Training</a>    
                                                 <ul class="submenu">
                                                     <li><a href="https://codedivision.co.uk/commercial-cyber">Cyber Skills Training</a></li>
                                                     <li><a href="https://codedivision.co.uk/commercial-min">Data Skills for Business</a></li>
